--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
            
         </div>
         <div class="col-md text-center mt-5 mb-5" >
-            <h3 style="color:#fff;" class="mt-5" >Sotfware Dev |
+            <h3 style="color:#fff;" class="mt-5" >Sotfware Dev | graphics Designer |
                 Indie Gamer |
                 Deep Learning Enthusiast |
             Big Data Engineer</h3>
