--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h3 style="color:#fff;" class="mt-5" >Sotfware Dev | graphics Designer |
                 Indie Gamer |
                 Deep Learning Enthusiast |
-            Big Data Engineer</h3>
+            Hadoop/Spark</h3>
         </div>
     </div>
     <div class="row">
