--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="col-sm-4">
                 <div class="card shadow">
                     <div class="card-body s">
-                        <h5 class="card-title">Potoshop</h5>
+                        <h5 class="card-title">Photoshop</h5>
                         <p class="card- ">
                             <div class="progress">
                                 <div class="progress-bar bg-primary" style="width: 80%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> </div>
@@ -184,7 +184,7 @@
             <div class="col-sm-4">
                 <div class="card shadow">
                     <div class="card-body s">
-                        <h5 class="card-title">Adobe Affer Effects</h5>
+                        <h5 class="card-title">Adobe After Effects</h5>
                         <p class="card- ">
                             <div class="progress">
                                 <div class="progress-bar bg-primary" style="width: 75%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> </div>
