--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <img class="rounded shadow" src="img/me.png" alt="">
             </div>
             <div class="col-md-9 my-auto">
-                <h5>a knowledge seeker loves to know some about everything and know more about somethings.</h5>
+                <h5 class="p-4">a knowledge seeker loves to know some about everything and know more about somethings.</h5>
                 <blockquote class="blockquote ml-4 mt-2">
                     <p class="mb-0">working hard will eventually pay off, sooner or later.
                     </p>
@@ -75,7 +75,7 @@
         <div class="row" data-aos="fade-up">
 
             <div class="col-sm-4">
-                <div class="card shadow">
+                <div class="card shadow  m-2">
                     <img class="card-img-top" src="img/suda_run.png" alt="">
                     <div class="card-body s">
                         <h5 class="card-title">Suda Run</h5>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="col-sm-4">
-                <div class="card shadow">
+                <div class="card shadow  m-2">
                     <img class="card-img-top" src="img/neon_dash.png" alt="">
                     <div class="card-body s">
                         <h5 class="card-title">Noen Dash</h5>
@@ -97,7 +97,7 @@
             </div>
 
             <div class="col-sm-4">
-                <div class="card shadow">
+                <div class="card shadow  m-2">
                     <img class="card-img-top" src="img/desktop.png" alt="">
                     <div class="card-body s">
                         <h5 class="card-title">Library Desktop Application</h5>
